dnl -*- mode: m4 -*-

AC_INIT([dbus-doc],
        [0.0.1],
        [rob.taylor@codethink.co.uk])

AM_INIT_AUTOMAKE([1.9])

AM_MAINTAINER_MODE

AC_ISC_POSIX
AC_PROG_CC
AC_STDC_HEADERS
AC_PROG_LIBTOOL

AC_HEADER_STDC

AC_SUBST(VERSION)

# Save flags to aclocal
ACLOCAL="$ACLOCAL $ACLOCAL_FLAGS"

# Dependencies

AC_OUTPUT([
Makefile
tools/Makefile
examples/Makefile
])
